--- a/autofindwizard.ui
+++ b/autofindwizard.ui
@@ -487,7 +487,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="pushButton">
+       <widget class="QPushButton" name="startFind">
         <property name="text">
          <string>Подобрать коэффициенты</string>
         </property>
@@ -543,7 +543,7 @@
       <item>
        <widget class="QPushButton" name="pushButton_2">
         <property name="text">
-         <string>Сохранить в файл</string>
+         <string>Принять параметры</string>
         </property>
        </widget>
       </item>
