--- a/style.css
+++ b/style.css
@@ -4,6 +4,17 @@
 QMainWindow{
     background-color: white;
 }
+QTabWidget#BigLabel{
+    background: white;
+    color: #003AA3;
+    border-radius:4px;
+    border:1px solid #5CA4FF;
+    min-height:25px;
+    font-family: SFUIText-Bold;
+    font-size:16px;
+    padding-left:12px;
+    padding-right:12px;
+}
 QToolBar {
     background-color:#E0EEFF;
     spacing: 7px; /* spacing between items in the tool bar */
